# mesa

./: .editorconfig  .gitlab-ci.yml  .travis.yml  README.md  appveyor.yml  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: debian-install.sh  x86_64-w64-mingw32
build-support/: appveyor-llvm.meson.build
docs/: autoconf.html  debugging.html  devinfo.html  faq.html  install.html  llvmpipe.html  meson.html  releasing.html  submittingpatches.html  vmware-guest.html
docs/relnotes/: 19.0.0.html
include/: git_sha1.h.in  meson.build
meson/: test-version-script.map
scripts/: appveyor_msvc.bat
src/: Makefile.am  meson.build
src/amd/: meson.build
src/amd/addrlib/: meson.build
src/amd/common/: meson.build
src/amd/vulkan/: Makefile.sources  meson.build
src/compiler/: meson.build
src/compiler/glsl/: meson.build
src/compiler/glsl/glcpp/: meson.build
src/compiler/glsl/tests/: cache_test.c  meson.build
src/compiler/nir/: meson.build  nir.h  nir_builder_opcodes_h.py  nir_intrinsics.py  nir_intrinsics_c.py  nir_intrinsics_h.py
src/egl/: meson.build
src/egl/drivers/dri2/: egl_dri2.c
src/egl/wayland/: meson.build
src/egl/wayland/wayland-drm/: meson.build
src/egl/wayland/wayland-egl/: meson.build
src/gallium/: meson.build
src/gallium/auxiliary/: meson.build
src/gallium/auxiliary/pipe-loader/: meson.build
src/gallium/drivers/ddebug/: meson.build
src/gallium/drivers/freedreno/: meson.build
src/gallium/drivers/llvmpipe/: meson.build
src/gallium/drivers/noop/: meson.build
src/gallium/drivers/nouveau/: meson.build
src/gallium/drivers/r600/: meson.build
src/gallium/drivers/radeon/: meson.build
src/gallium/drivers/radeonsi/: meson.build
src/gallium/drivers/rbug/: meson.build
src/gallium/drivers/softpipe/: meson.build
src/gallium/drivers/swr/: meson.build
src/gallium/drivers/swr/rasterizer/jitter/: meson.build
src/gallium/drivers/trace/: meson.build
src/gallium/drivers/vc5/: meson.build
src/gallium/state_trackers/dri/: dri_context.c  dri_context.h  meson.build
src/gallium/state_trackers/hgl/: meson.build
src/gallium/state_trackers/osmesa/: meson.build
src/gallium/state_trackers/wgl/: meson.build
src/gallium/targets/dri/: meson.build
src/gallium/targets/graw-gdi/: meson.build
src/gallium/targets/graw-null/: meson.build
src/gallium/targets/graw-xlib/: meson.build
src/gallium/targets/haiku-softpipe/: meson.build
src/gallium/targets/libgl-gdi/: meson.build
src/gallium/targets/osmesa/: meson.build
src/gallium/tests/: meson.build
src/gallium/winsys/amdgpu/drm/: meson.build
src/gallium/winsys/nouveau/drm/: meson.build
src/gallium/winsys/radeon/drm/: meson.build
src/gallium/winsys/sw/dri/: meson.build
src/gallium/winsys/sw/hgl/: meson.build
src/gallium/winsys/sw/kms-dri/: meson.build
src/gallium/winsys/sw/null/: meson.build
src/gallium/winsys/sw/wrapper/: meson.build
src/gbm/: meson.build
src/glx/: meson.build
src/gtest/: meson.build
src/hgl/: meson.build
src/intel/: Android.vulkan.mk  Makefile.am  Makefile.compiler.am  Makefile.sources  Makefile.tools.am  Makefile.vulkan.am  meson.build
src/intel/blorp/: meson.build
src/intel/common/: meson.build
src/intel/compiler/: brw_nir_trig_workarounds.py  meson.build
src/intel/genxml/: gen_bits_header.py  meson.build
src/intel/isl/: meson.build
src/intel/tools/: Makefile.am
src/intel/vulkan/: Makefile.am  anv_entrypoints_gen.py  anv_pipeline.c  anv_private.h  meson.build
src/loader/: meson.build
src/mapi/: meson.build
src/mapi/es1api/: meson.build
src/mapi/es2api/: meson.build
src/mapi/glapi/: glapi.h  meson.build
src/mapi/shared-glapi/: meson.build
src/mesa/: Makefile.am  Makefile.sources  SConscript  meson.build
src/mesa/drivers/dri/: meson.build
src/mesa/drivers/dri/common/: dri_util.h
src/mesa/drivers/dri/i915/: intel_screen.c
src/mesa/drivers/dri/i965/: brw_context.c  brw_context.h  brw_link.cpp  brw_program.h  intel_screen.c  meson.build
src/mesa/drivers/osmesa/: meson.build
src/mesa/main/: meson.build
src/util/: meson.build  xmlconfig.c
src/util/tests/hash_table/: clear.c  delete_management.c  insert_many.c  meson.build  random_entry.c
src/util/tests/string_buffer/: meson.build
src/vulkan/: meson.build
src/vulkan/registry/: meson.build
src/vulkan/util/: meson.build
src/vulkan/wsi/: meson.build
subprojects/: .gitignore  dri2proto.wrap  glproto.wrap  libdrm.wrap  xproto.wrap
